--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^15.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "pac-resolver": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
