Update and rename github-linux-runner to github-linux-runner.yml

--- a/.github/workflows/github-linux-runner.yml
+++ b/.github/workflows/github-linux-runner.yml
@@ -1,7 +1,7 @@
 name: GitHub linux runner Demo
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Explore-GitHub-Actions-Linux:
     runs-on: [self-hosted, Linux]
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
