--- a/.github/workflows/azure-build-deploy.yml
+++ b/.github/workflows/azure-build-deploy.yml
@@ -1,11 +1,12 @@
 name: App Deploy tester
 
 on:
+  workflow_dispatch:  # manual trigger
+  push:
+    branches: main
   release:
     types: [created]
     
-  workflow_dispatch:  # manual trigger
-
 env:
   AZURE_WEBAPP_NAME: your-app-name    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
