--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -1,6 +1,7 @@
 name: Storm Azure Demo
 
 on:
+  workflow_dispatch: # manual trigger
   release:
     types: [created]
 
@@ -15,9 +16,42 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
-    - uses: actions/checkout@v2
-    - name: Tulosta jotain
-      run: echo "Jotain!"
-      
-          
-
+    - name: Checkout files
+      uses: actions/checkout@v2
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v2.4.0
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+    - name: NPM Stuff
+      run: yarn
+    - name: Run tests
+      run: yarn test
+    - name: Build prod version
+      run: yarn build
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.2.4
+      with:
+        name: artifact
+        path: build
+    
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v2.0.10
+        with:
+          name: artifact
+          path: ${{ github.workspace }}/site
+      - name: Azure Login
+        uses: Azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS_2 }}
+      - name: Deploy to Azure WebApp
+        uses: Azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}          
+          package: ${{ github.workspace }}/site          
+          startup-command: "pm2 serve /home/site/wwwroot --no-daemon --spa
