--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -54,4 +54,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}          
           package: ${{ github.workspace }}/site          
-          startup-command: "pm2 serve /home/site/wwwroot --no-daemon --spa
+          startup-command: "pm2 serve /home/site/wwwroot --no-daemon --spa"
