--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -36,7 +36,8 @@ jobs:
     
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux]
     needs: build
     
     steps:
