--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout files
+        uses: actions/checkout@v2
+      
       - name: Use Composite Action
         id: test-action
         uses: ./.github/actions/test-action
