--- a/.github/workflows/azure-build-deploy.yml
+++ b/.github/workflows/azure-build-deploy.yml
@@ -2,15 +2,6 @@ name: App Deploy tester
 
 on:
   workflow_dispatch:  # manual trigger
-  push:
-    branches: main
-  release:
-    types: [created]
-    
-env:
-  AZURE_WEBAPP_NAME: your-app-name    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '10.x'                # set this to the node version to use
 
 jobs:
   build:
@@ -18,41 +9,61 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        run: "echo test"
       - name: Use Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ env.NODE_VERSION }}
+        run: "echo test"
       - name: npm install, build, and test
-        run: |
-          yarn
-          yarn build
-          yarn test
+        run: "echo test"
       - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v2.2.4
-        with:
-          name: site          
-          path: build          
+        run: "echo test"
     
-  deploy:
-    name: Deploy
+  deployTest:
+    name: Deploy to Test
     runs-on: ubuntu-latest
     needs: build
     
     steps:
       - name: Download a Build Artifact
-        uses: actions/download-artifact@v2.0.10
-        with:
-          name: site
-          path: ${{ github.workspace }}/site
+        run: "echo test"
       
       - name: Azure Login
-        uses: Azure/login@v1.1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+        run: "echo test"
     
       - name: 'Deploy to Azure WebApp'
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: storm-actions-tester
-          package: ${{ github.workspace }}/site
+        run: "echo test"
+        
+  testUi:
+    name: Run UI tests
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Download a Build Artifact
+        run: "echo test"
+
+      - name: Run UI Tests
+        run: "echo test"
+        
+  approval:
+    name: Approve PROD
+    runs-on: ubuntu-latest
+    needs: deployTest
+
+    steps:
+      - name: Download a Build Artifact
+        run: "echo test"
+
+      - name: Run UI Tests
+        run: "echo test"
+
+  deployProd:
+    name: Deploy to PROD
+    runs-on: ubuntu-latest
+    needs: approval
+
+    steps:
+      - name: Download a Build Artifact
+        run: "echo test"
+
+      - name: Run UI Tests
+        run: "echo test"
